# 0.00.28 (59727) Dec 27, 2011
Added cakes for 1-8 denominator
Removed cakes for 1/12 divisions
Started click-to-toggle cake feature
# 0.00.27 (59713) Dec 27, 2011
Put the cake after the glass of water, and the number line last in the representation control panel
Added more cake images for testing
# 0.00.26 (59710) Dec 27, 2011
Fixed: When clicking the water glasses, the clicking action works fine but does not appear to affect the fraction value.
# 0.00.25 (59702) Dec 27, 2011
Added new images for cake 1/2 and 1/3 divisions
Show empty cake divisions up to 6 pies
# 0.00.24 (59700) Dec 27, 2011
Made division bar rounded for reduced and mixed fractions
Changed "Reduced" and "Mixed" from radio buttons to checkboxes
Made water glasses clickable
Change the numerator when clicking anywhere in the number line
# 0.00.23 (59585) Dec 21, 2011
Fixed: Vertical bars should fill bottom to top instead of top to bottom
For water glasses, added a darker thicker water edge for the "front" edge that aligns with the tick mark
Show 6 empty cups on startup for cup mode
Move "cup" button between "vertical bars" and "number line" to fit the pattern: "green stuff on the left"
# 0.00.22 (59569) Dec 20, 2011
Made vertical and horizontal bars click-to-toggle
Made number line draggable
# 0.00.21 (59553) Dec 20, 2011
Made default numerator 0
Fixed initialization bug that caused it to show only 1 pie on startup
Show all 6 pies all the time and gray out if empty
Show a "+" button for adding empty pies
Don't show next pie as empty
Removed "Random/In Order" control panel
# 0.00.20 (59522) Dec 20, 2011
Fixed: Whole pie node has a line at theta=0
Rewrote pie to use individual slices
Added empty pie after a filled pie
# 0.00.19 (59488) Dec 20, 2011
Fixed: a "zero" is not displayed for the "mixed" option.
# 0.00.18 (59483) Dec 19, 2011
Made water tick marks darker
Enabled "holding down the spinner" to cycle through the numbers at a medium speed
Changed max denominator back to 8