@@ -1,3 +1,4 @@
+Fixed a bug in cake slice selection
 # 0.00.28 (59727) Dec 27, 2011
 Added cakes for 1-8 denominator
 Removed cakes for 1/12 divisions
